--- a/index.html
+++ b/index.html
@@ -22,39 +22,37 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>BTVN 3 - Java 22</title>
+    <title>BTVN 5 - Java 22</title>
   </head>
   <body>
-    <div class="card-item">
-      <div class="card-header">
-        <div class="left-logo">
-          <div class="logo">
-            <p>R</p>
+    <div class="container">
+      <div class="row">
+        <div class="left-side">
+          <img src="./assets/images/facebook.svg" alt="" />
+          <h2>
+            Facebook giúp bạn kết nối và chia sẻ với mọi người trong cuộc sống
+            của bạn.
+          </h2>
+        </div>
+        <div class="right-side">
+          <form action="#">
+            <input type="email" placeholder="Email hoặc số điện thoại" />
+            <input type="password" placeholder="Mật khẩu" />
+            <button class="submit-button">Đăng nhập</button>
+            <div class="forgot-password">
+              <a href="#">Quên mật khẩu?</a>
+            </div>
+            <hr />
+            <div class="create-account-button">
+              <a href="#">Tạo tài khoản mới</a>
+            </div>
+          </form>
+          <div class="registration-message">
+            <a href="#">Tạo Trang</a>
+            <span
+              >dành cho người nổi tiếng, thương hiệu hoặc doanh nghiệp.</span
+            >
           </div>
-        </div>
-        <div class="food-info">
-          <div class="food-name">Shrimp and Chorizo Paella</div>
-          <div class="date-time">September 14, 2016</div>
-        </div>
-        <div class="menu-icon">
-          <i class="fas fa-ellipsis-v"></i>
-        </div>
-      </div>
-      <img class="card-image" src="./assets/images/foodImg.jpeg" alt="" />
-      <div class="card-description">
-        <p>
-          This impressive paella is a perfect party dish and a fun meal to cook
-          together with your guests. Add 1 cup of frozen peas along with the
-          mussels, if you like.
-        </p>
-      </div>
-      <div class="card-footer">
-        <div class="footer-left">
-          <i class="fas fa-heart"></i>
-          <i class="fas fa-share-alt"></i>
-        </div>
-        <div class="footer-right">
-          <i class="fas fa-chevron-down"></i>
         </div>
       </div>
     </div>
